# WAN-Human-Geometry-Sidecar

./: README.md  pyproject.toml
bgfs/: cli.py  compat.py  config.py
bgfs/data/: diffusion_dataset.py  npz_dataset.py  video_io.py
bgfs/geometry/: heatmaps.py  kinematics.py  mediapipe_extract.py
bgfs/infer/: fix_roi.py  generate_wan.py
bgfs/models/: critic.py
bgfs/train/: precompute.py  train_critic.py  train_regionfix_lora.py
bgfs/utils/: io.py
configs/: default.yaml
